--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./images/dom-casmurro.jpeg" alt="">
-    <div id="informacoes-faixa">
-        <p>Capítulo 1</p>
-        <p>Machado de Assis</p>
-    </div>
-        <div id="container-botoes">
-        <button>voltar</button>
-        <button>play</button>
-        <button>avançar</button>
+    <div class="container-aplicativo">
+        <img src="./images/dom-casmurro.jpeg" alt="">
+        <div id="informacoes-faixa">
+            <p id="capitulo">Capítulo 1</p>
+            <p id="nome-autor">Machado de Assis</p>
+        </div>
+            <div id="container-botoes">
+            <button id="anterior" class="bi bi-skip-backward-fill"></button>
+            <button id="play-pause" class="bi bi-play-circle-fill"></button>
+            <button id="proximo" class="bi bi-skip-forward-fill"></button>
+        </div>
     </div>
 </body>
 </html>
