--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             <button id="proximo" class="bi bi-skip-forward-fill"></button>
         </div>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
