--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <p id="capitulo">Capítulo 1</p>
             <p id="nome-autor">Machado de Assis</p>
         </div>
-            <div id="container-botoes">
+        <audio src="./books/dom-casmurro/1.mp3"></audio>
+        <div id="container-botoes">
             <button id="anterior" class="bi bi-skip-backward-fill"></button>
             <button id="play-pause" class="bi bi-play-circle-fill"></button>
             <button id="proximo" class="bi bi-skip-forward-fill"></button>
