--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p id="capitulo">Capítulo 1</p>
             <p id="nome-autor">Machado de Assis</p>
         </div>
-        <audio src="./books/dom-casmurro/1.mp3"></audio>
+        <audio id="audio-capitulo" src="./books/dom-casmurro/1.mp3"></audio>
         <div id="container-botoes">
             <button id="anterior" class="bi bi-skip-backward-fill"></button>
             <button id="play-pause" class="bi bi-play-circle-fill"></button>
